Changing a bunch of stuff!

--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -3,15 +3,19 @@
 }
 
 .top-nav {
-    background: $gray;
+    background: $red;
     padding: 3px 20px;
-    border-bottom: 1px solid darken($gray, 10%);
+    border-bottom: 1px solid darken($salmon, 10%);
     ul {
         margin-bottom: 0px;
         li {
             display: inline-block;
             font-size: 1.2em;
             margin-right: 10px;
+
+            a {
+                color: $beige;
+            }
         }
     }
 }
@@ -19,16 +23,17 @@
 .logo {
     margin: 50px 0; 
     padding: 0 40px;
-    font-family: $headerFontFamily;
-    text-shadow: 1px 1px #fff, -1px -1px #333;
+    font-family: $bodyFontFamily;
+    @include text-shadow;
     .blog-title {
         color: $blue;
-        margin-right: 25%;
+        margin-right: 15%;
         font-size: 4em;
     }
     .blog-description {
-        font-size: 3em;
-        color: darken($gray, 50%);
+        font-size: 2.5em;
+        font-family: $bodyFontFamily;
+        color: $red;
     }
 
 }
