--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: AJ Morris Design v2013
+Theme Name: SurfCubes, LLC v2013
 Theme URI: 
 Description: A New Design for 2013
 Version: 1.0
@@ -7,3 +7,4 @@ Author: AJ Morris
 Author URI: http://ajmorris.me
 */
 
+/* Nothing to see in this file! :) */
