--- a/scss/mixins/_mixins.scss
+++ b/scss/mixins/_mixins.scss
@@ -3,3 +3,7 @@
     color: rgba(10,60,150, 0.8);
     text-shadow: 1px 4px 6px #def, 0 0 0 #000, 1px 4px 6px #def;
 }
+
+@mixin text-shadow {
+    text-shadow: 1px 1px #fff;
+}
