--- a/scss/modules/_content.scss
+++ b/scss/modules/_content.scss
@@ -1,8 +1,7 @@
 .content {
     padding: 50px 0;
     background: $white;
-    @include box-shadow(0px 0px 5px darken($gray, 20%) );
-
+    border: 1px solid $salmon;
     .entry {
         margin-top: 20px;
 
@@ -14,8 +13,9 @@
 
 .entry-title {
     margin-bottom: 20px;
-    color: $blue;
-    text-shadow: 1px 1px 1px $gray;
+    color: $red;
+    letter-spacing: 1px;
+    text-shadow: 1px 1px 1px #eee;
 }    
 
 article {
