--- a/scss/modules/_content.scss
+++ b/scss/modules/_content.scss
@@ -1,7 +1,7 @@
 .content {
     padding: 50px 0;
     background: $white;
-    border: 1px solid $salmon;
+    border: 1px solid $blue;
     .entry {
         margin-top: 20px;
 
@@ -13,7 +13,7 @@
 
 .entry-title {
     margin-bottom: 20px;
-    color: $red;
+    color: $blue;
     letter-spacing: 1px;
     text-shadow: 1px 1px 1px #eee;
 }    
