--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -55,3 +55,577 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'entypo';
+    src:url('../fonts/entypo.eot');
+    src:url('../fonts/entypo.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/entypo.woff') format('woff'),
+        url('../fonts/entypo.ttf') format('truetype'),
+        url('../fonts/entypo.svg#entypo') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* Use the following CSS code if you want to use data attributes for inserting your icons */
+[data-icon]:before {
+    font-family: 'entypo';
+    content: attr(data-icon);
+    speak: none;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+}
+
+/* Use the following CSS code if you want to have a class per icon */
+/*
+Instead of a list of all class selectors,
+you can use the generic selector below, but it's slower:
+[class*="icon-"]:before {
+*/
+.icon-phone:before, .icon-export:before, .icon-mobile:before, .icon-mouse:before, .icon-directions:before, .icon-mail:before, .icon-paperplane:before, .icon-pencil:before, .icon-paperclip:before, .icon-drawer:before, .icon-reply:before, .icon-reply-all:before, .icon-forward:before, .icon-user:before, .icon-users:before, .icon-user-add:before, .icon-vcard:before, .icon-quote:before, .icon-comment:before, .icon-chat:before, .icon-thumbs-down:before, .icon-thumbs-up:before, .icon-star:before, .icon-heart:before, .icon-sharable:before, .icon-share:before, .icon-map:before, .icon-location:before, .icon-house:before, .icon-briefcase:before, .icon-keyboard:before, .icon-browser:before, .icon-air:before, .icon-popup:before, .icon-search:before, .icon-printer:before, .icon-bell:before, .icon-link:before, .icon-flag:before, .icon-cog:before, .icon-tools:before, .icon-trophy:before, .icon-tag:before, .icon-camera:before, .icon-megaphone:before, .icon-moon:before, .icon-cd:before, .icon-earth:before, .icon-voicemail:before, .icon-database:before, .icon-cone:before, .icon-droplet:before, .icon-thunder:before, .icon-bolt:before, .icon-calendar:before, .icon-microphone:before, .icon-clock:before, .icon-eye:before, .icon-lifebuoy:before, .icon-airplane:before, .icon-bag:before, .icon-newspaper:before, .icon-book:before, .icon-graduation:before, .icon-hourglass:before, .icon-gauge:before, .icon-language:before, .icon-network:before, .icon-key:before, .icon-battery:before, .icon-bucket:before, .icon-magnet:before, .icon-drive:before, .icon-cup:before, .icon-rocket:before, .icon-brush:before, .icon-suitcase:before, .icon-credit-card:before, .icon-light-bulb:before, .icon-infinity:before, .icon-screen:before, .icon-code:before, .icon-publish:before, .icon-clipboard:before, .icon-checkmark:before, .icon-cycle:before, .icon-document:before, .icon-book-2:before, .icon-arrow-right:before, .icon-github:before, .icon-linkedin:before, .icon-skype:before, .icon-ellipsis:before, .icon-arrow-left:before, .icon-play:before, .icon-docs:before, .icon-cw:before, .icon-cross:before, .icon-cart:before, .icon-box:before, .icon-ticket:before, .icon-rss:before, .icon-signal:before, .icon-thermometer:before, .icon-droplets:before, .icon-untitled:before, .icon-statistics:before, .icon-pie:before, .icon-bars:before, .icon-graph:before, .icon-lock:before, .icon-lock-open:before, .icon-logout:before, .icon-login:before, .icon-warning:before, .icon-text:before, .icon-flow-tree:before, .icon-flattr:before, .icon-evernote:before, .icon-dropbox:before, .icon-instagram:before, .icon-qq:before, .icon-spotify:before, .icon-vk:before, .icon-circles:before, .icon-dribbble:before, .icon-flickr:before, .icon-vimeo:before, .icon-twitter:before, .icon-facebook:before, .icon-facebook-2:before, .icon-googleplus:before, .icon-pinterest:before, .icon-dot:before, .icon-stumbleupon:before, .icon-lastfm:before, .icon-rdio:before, .icon-behance:before, .icon-paypal:before, .icon-flow-branch:before, .icon-bookmarks:before, .icon-bookmark:before, .icon-help:before, .icon-info:before, .icon-info-2:before, .icon-question:before, .icon-upload:before, .icon-cloud:before, .icon-install:before, .icon-download:before, .icon-upload-2:before, .icon-folder:before, .icon-video:before, .icon-pictures:before, .icon-pause:before, .icon-landscape:before, .icon-record:before, .icon-stop:before, .icon-next:before, .icon-previous:before, .icon-first:before, .icon-last:before, .icon-resize-enlarge:before, .icon-resize-shrink:before, .icon-arrow-down:before, .icon-arrow-up:before, .icon-arrow-right-2:before, .icon-shuffle:before, .icon-ccw:before, .icon-arrow:before, .icon-arrow-2:before, .icon-retweet:before, .icon-loop:before, .icon-history:before, .icon-list:before, .icon-list-2:before, .icon-flow-cascade:before, .icon-dots:before {
+    font-family: 'entypo';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+}
+.icon-phone:before {
+    content: "\e000";
+}
+.icon-export:before {
+    content: "\e001";
+}
+.icon-mobile:before {
+    content: "\e002";
+}
+.icon-mouse:before {
+    content: "\e003";
+}
+.icon-directions:before {
+    content: "\e004";
+}
+.icon-mail:before {
+    content: "\e005";
+}
+.icon-paperplane:before {
+    content: "\e006";
+}
+.icon-pencil:before {
+    content: "\e007";
+}
+.icon-paperclip:before {
+    content: "\e009";
+}
+.icon-drawer:before {
+    content: "\e00a";
+}
+.icon-reply:before {
+    content: "\e00b";
+}
+.icon-reply-all:before {
+    content: "\e00c";
+}
+.icon-forward:before {
+    content: "\e00d";
+}
+.icon-user:before {
+    content: "\e00e";
+}
+.icon-users:before {
+    content: "\e00f";
+}
+.icon-user-add:before {
+    content: "\e010";
+}
+.icon-vcard:before {
+    content: "\e011";
+}
+.icon-quote:before {
+    content: "\e012";
+}
+.icon-comment:before {
+    content: "\e013";
+}
+.icon-chat:before {
+    content: "\e014";
+}
+.icon-thumbs-down:before {
+    content: "\e015";
+}
+.icon-thumbs-up:before {
+    content: "\e016";
+}
+.icon-star:before {
+    content: "\e017";
+}
+.icon-heart:before {
+    content: "\e019";
+}
+.icon-sharable:before {
+    content: "\e01b";
+}
+.icon-share:before {
+    content: "\e01c";
+}
+.icon-map:before {
+    content: "\e020";
+}
+.icon-location:before {
+    content: "\e021";
+}
+.icon-house:before {
+    content: "\e022";
+}
+.icon-briefcase:before {
+    content: "\e024";
+}
+.icon-keyboard:before {
+    content: "\e025";
+}
+.icon-browser:before {
+    content: "\e026";
+}
+.icon-air:before {
+    content: "\e027";
+}
+.icon-popup:before {
+    content: "\e029";
+}
+.icon-search:before {
+    content: "\e02a";
+}
+.icon-printer:before {
+    content: "\e02c";
+}
+.icon-bell:before {
+    content: "\e02d";
+}
+.icon-link:before {
+    content: "\e02e";
+}
+.icon-flag:before {
+    content: "\e02f";
+}
+.icon-cog:before {
+    content: "\e030";
+}
+.icon-tools:before {
+    content: "\e031";
+}
+.icon-trophy:before {
+    content: "\e032";
+}
+.icon-tag:before {
+    content: "\e033";
+}
+.icon-camera:before {
+    content: "\e034";
+}
+.icon-megaphone:before {
+    content: "\e035";
+}
+.icon-moon:before {
+    content: "\e036";
+}
+.icon-cd:before {
+    content: "\e039";
+}
+.icon-earth:before {
+    content: "\e03a";
+}
+.icon-voicemail:before {
+    content: "\e03b";
+}
+.icon-database:before {
+    content: "\e03c";
+}
+.icon-cone:before {
+    content: "\e03d";
+}
+.icon-droplet:before {
+    content: "\e03e";
+}
+.icon-thunder:before {
+    content: "\e03f";
+}
+.icon-bolt:before {
+    content: "\e040";
+}
+.icon-calendar:before {
+    content: "\e041";
+}
+.icon-microphone:before {
+    content: "\e042";
+}
+.icon-clock:before {
+    content: "\e043";
+}
+.icon-eye:before {
+    content: "\e044";
+}
+.icon-lifebuoy:before {
+    content: "\e045";
+}
+.icon-airplane:before {
+    content: "\e046";
+}
+.icon-bag:before {
+    content: "\e047";
+}
+.icon-newspaper:before {
+    content: "\e048";
+}
+.icon-book:before {
+    content: "\e049";
+}
+.icon-graduation:before {
+    content: "\e04a";
+}
+.icon-hourglass:before {
+    content: "\e04c";
+}
+.icon-gauge:before {
+    content: "\e04d";
+}
+.icon-language:before {
+    content: "\e04e";
+}
+.icon-network:before {
+    content: "\e04f";
+}
+.icon-key:before {
+    content: "\e050";
+}
+.icon-battery:before {
+    content: "\e051";
+}
+.icon-bucket:before {
+    content: "\e052";
+}
+.icon-magnet:before {
+    content: "\e053";
+}
+.icon-drive:before {
+    content: "\e054";
+}
+.icon-cup:before {
+    content: "\e055";
+}
+.icon-rocket:before {
+    content: "\e056";
+}
+.icon-brush:before {
+    content: "\e057";
+}
+.icon-suitcase:before {
+    content: "\e058";
+}
+.icon-credit-card:before {
+    content: "\e059";
+}
+.icon-light-bulb:before {
+    content: "\e05a";
+}
+.icon-infinity:before {
+    content: "\e05b";
+}
+.icon-screen:before {
+    content: "\e05c";
+}
+.icon-code:before {
+    content: "\e05d";
+}
+.icon-publish:before {
+    content: "\e065";
+}
+.icon-clipboard:before {
+    content: "\e066";
+}
+.icon-checkmark:before {
+    content: "\e067";
+}
+.icon-cycle:before {
+    content: "\e068";
+}
+.icon-document:before {
+    content: "\e069";
+}
+.icon-book-2:before {
+    content: "\e06a";
+}
+.icon-arrow-right:before {
+    content: "\e06c";
+}
+.icon-github:before {
+    content: "\e06e";
+}
+.icon-linkedin:before {
+    content: "\e06f";
+}
+.icon-skype:before {
+    content: "\e070";
+}
+.icon-ellipsis:before {
+    content: "\e074";
+}
+.icon-arrow-left:before {
+    content: "\e075";
+}
+.icon-play:before {
+    content: "\e077";
+}
+.icon-docs:before {
+    content: "\e078";
+}
+.icon-cw:before {
+    content: "\e079";
+}
+.icon-cross:before {
+    content: "\e07a";
+}
+.icon-cart:before {
+    content: "\e07b";
+}
+.icon-box:before {
+    content: "\e07c";
+}
+.icon-ticket:before {
+    content: "\e07d";
+}
+.icon-rss:before {
+    content: "\e07e";
+}
+.icon-signal:before {
+    content: "\e07f";
+}
+.icon-thermometer:before {
+    content: "\e080";
+}
+.icon-droplets:before {
+    content: "\e081";
+}
+.icon-untitled:before {
+    content: "\e082";
+}
+.icon-statistics:before {
+    content: "\e083";
+}
+.icon-pie:before {
+    content: "\e084";
+}
+.icon-bars:before {
+    content: "\e085";
+}
+.icon-graph:before {
+    content: "\e086";
+}
+.icon-lock:before {
+    content: "\e087";
+}
+.icon-lock-open:before {
+    content: "\e088";
+}
+.icon-logout:before {
+    content: "\e089";
+}
+.icon-login:before {
+    content: "\e08a";
+}
+.icon-warning:before {
+    content: "\e08b";
+}
+.icon-text:before {
+    content: "\e08c";
+}
+.icon-flow-tree:before {
+    content: "\e08d";
+}
+.icon-flattr:before {
+    content: "\e092";
+}
+.icon-evernote:before {
+    content: "\e093";
+}
+.icon-dropbox:before {
+    content: "\e094";
+}
+.icon-instagram:before {
+    content: "\e095";
+}
+.icon-qq:before {
+    content: "\e096";
+}
+.icon-spotify:before {
+    content: "\e097";
+}
+.icon-vk:before {
+    content: "\e098";
+}
+.icon-circles:before {
+    content: "\e099";
+}
+.icon-dribbble:before {
+    content: "\e09a";
+}
+.icon-flickr:before {
+    content: "\e09b";
+}
+.icon-vimeo:before {
+    content: "\e09d";
+}
+.icon-twitter:before {
+    content: "\e09f";
+}
+.icon-facebook:before {
+    content: "\e0a1";
+}
+.icon-facebook-2:before {
+    content: "\e0a3";
+}
+.icon-googleplus:before {
+    content: "\e0a4";
+}
+.icon-pinterest:before {
+    content: "\e0a6";
+}
+.icon-dot:before {
+    content: "\e0ac";
+}
+.icon-stumbleupon:before {
+    content: "\e0b1";
+}
+.icon-lastfm:before {
+    content: "\e0b3";
+}
+.icon-rdio:before {
+    content: "\e0b5";
+}
+.icon-behance:before {
+    content: "\e0b7";
+}
+.icon-paypal:before {
+    content: "\e0b8";
+}
+.icon-flow-branch:before {
+    content: "\e072";
+}
+.icon-bookmarks:before {
+    content: "\e073";
+}
+.icon-bookmark:before {
+    content: "\e091";
+}
+.icon-help:before {
+    content: "\e09c";
+}
+.icon-info:before {
+    content: "\e0a0";
+}
+.icon-info-2:before {
+    content: "\e0a2";
+}
+.icon-question:before {
+    content: "\e0a5";
+}
+.icon-upload:before {
+    content: "\e0a7";
+}
+.icon-cloud:before {
+    content: "\e0a8";
+}
+.icon-install:before {
+    content: "\e0b0";
+}
+.icon-download:before {
+    content: "\e0b2";
+}
+.icon-upload-2:before {
+    content: "\e0b4";
+}
+.icon-folder:before {
+    content: "\e0b6";
+}
+.icon-video:before {
+    content: "\e0b9";
+}
+.icon-pictures:before {
+    content: "\e0ba";
+}
+.icon-pause:before {
+    content: "\e0bb";
+}
+.icon-landscape:before {
+    content: "\e0bc";
+}
+.icon-record:before {
+    content: "\e0bd";
+}
+.icon-stop:before {
+    content: "\e0be";
+}
+.icon-next:before {
+    content: "\e0bf";
+}
+.icon-previous:before {
+    content: "\e0c0";
+}
+.icon-first:before {
+    content: "\e0c1";
+}
+.icon-last:before {
+    content: "\e0c2";
+}
+.icon-resize-enlarge:before {
+    content: "\e0c3";
+}
+.icon-resize-shrink:before {
+    content: "\e0c4";
+}
+.icon-arrow-down:before {
+    content: "\e0cb";
+}
+.icon-arrow-up:before {
+    content: "\e0cc";
+}
+.icon-arrow-right-2:before {
+    content: "\e0cd";
+}
+.icon-shuffle:before {
+    content: "\e0c5";
+}
+.icon-ccw:before {
+    content: "\e0c8";
+}
+.icon-arrow:before {
+    content: "\e0c9";
+}
+.icon-arrow-2:before {
+    content: "\e0ca";
+}
+.icon-retweet:before {
+    content: "\e0ce";
+}
+.icon-loop:before {
+    content: "\e0cf";
+}
+.icon-history:before {
+    content: "\e0d0";
+}
+.icon-list:before {
+    content: "\e0d1";
+}
+.icon-list-2:before {
+    content: "\e0d2";
+}
+.icon-flow-cascade:before {
+    content: "\e008";
+}
+.icon-dots:before {
+    content: "\e018";
+}
