--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -58,11 +58,11 @@
 
 @font-face {
     font-family: 'entypo';
-    src:url('../fonts/entypo.eot');
-    src:url('../fonts/entypo.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/entypo.woff') format('woff'),
-        url('../fonts/entypo.ttf') format('truetype'),
-        url('../fonts/entypo.svg#entypo') format('svg');
+    src:url('../fonts/entypo/entypo.eot');
+    src:url('../fonts/entypo/entypo.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/entypo/entypo.woff') format('woff'),
+        url('../fonts/entypo/entypo.ttf') format('truetype'),
+        url('../fonts/entypo/entypo.svg#entypo') format('svg');
     font-weight: normal;
     font-style: normal;
 }
