--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -100,3 +100,11 @@ $tabTermFontSize: 12px;
 
 $navBarHeight: 40px;
 $navFlyoutBaseWidth: 250px;
+
+// $ratio: $golden; // THIS IS DEFAULT IN MODULAR-SCALE
+$baseFontSize: 14px;
+$importantModNum: 44px;
+$base-size: $baseFontSize $importantModNum;
+// Produced the following list of values: 14, 17, 23, 27, 37, 44, 59, 71, 95, 115;
+// http://www.modularscale.com by Tim Brown
+// https://github.com/scottkellum/modular-scale by scottkellum
