--- a/scss/app.scss
+++ b/scss/app.scss
@@ -10,6 +10,7 @@
 @import "modules/content";
 @import "modules/footer";
 @import "modules/comments";
+@import "modules/features";
 
 // ----------------------------------------
 // Import specific parts of Foundation by commenting the import "foundation"
