More work on the content and the header.

--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -12,9 +12,11 @@
             display: inline-block;
             font-size: 1.2em;
             margin-right: 10px;
-
             a {
                 color: $gray;
+                &:hover {
+                    text-decoration: underline;
+                }
             }
         }
     }
