--- a/css/app.css
+++ b/css/app.css
@@ -7033,25 +7033,29 @@ body {
   font-size: 1.2em;
   margin-right: 10px;
 }
-/* line 16, ../scss/modules/_header.scss */
+/* line 15, ../scss/modules/_header.scss */
 .top-nav ul li a {
   color: #eeeeee;
 }
+/* line 17, ../scss/modules/_header.scss */
+.top-nav ul li a:hover {
+  text-decoration: underline;
+}
 
-/* line 23, ../scss/modules/_header.scss */
+/* line 25, ../scss/modules/_header.scss */
 .logo {
   margin: 50px 0;
   padding: 0 40px;
   font-family: "open_sans_lightregular", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-shadow: 0px 0px 1px #aaaaaa;
 }
-/* line 28, ../scss/modules/_header.scss */
+/* line 30, ../scss/modules/_header.scss */
 .logo .blog-title {
   color: #1382c3;
   margin-right: 15%;
   font-size: 4em;
 }
-/* line 33, ../scss/modules/_header.scss */
+/* line 35, ../scss/modules/_header.scss */
 .logo .blog-description {
   font-size: 2.5em;
   font-family: "open_sans_lightregular", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -7070,7 +7074,7 @@ body {
 }
 /* line 8, ../scss/modules/_content.scss */
 .content .entry p {
-  font-size: 1.2em;
+  font-size: 1.5em;
 }
 
 /* line 14, ../scss/modules/_content.scss */
