--- a/scss/modules/_content.scss
+++ b/scss/modules/_content.scss
@@ -9,6 +9,11 @@
             font-size: 1.5em;
         }
     }
+
+    ul li { 
+        font-size: 1.5em; 
+        margin-left: 40px;
+    }
 }
 
 .entry-title {
